--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>To strona jest</h1>
+<%- include('partials/header') %>
+<body >
+    <%- include('partials/navbar') %>
+    <div class="container" style="background-color: lightcyan;">
+        <h1 >Witaj poszukiwaczu wysmakowanych mebli na oficjalnej stronie Ślimaczych Stołów!!!</h1>
+        <div class="container" style="margin-top: 20px;">
+            <h2>Dlaczego warto zamówić u nas twój nowy komplet mebli?</h2>
+            <p>W Ślmiaczych Stołach liczy się dla nas twoja unikalna osobowość i dlatego jesteśmy gotowi realizować nawet najbardziej wymyślne potrzeby naszy klientów. 
+                <br>
+                Potrzebujesz stołu w z jedną nogą w kształcie ślimaka wcinającego winogrona? <b> Nie ma problemu !!!!!!!</b>
+                <br>
+                Nasz zespół składa się z specjalistó od wyrobów stolarskich, więc możesz oczekiwać od naszych produktów najwyższej możliwej jakości.
+                Realizujemy nasze zamówenia jak najszybciej jak tylko potrafimy, więc twój nowy zestaw mebli możę się u ciebie zagościć nawet w tym samym mięsiącu, w którym go zamówiłeś.
+            </p>
+            <h2> Jak działą proces ? </h2>
+            <p>Działa jak działą co cię to interesuje, ważne że na końcu możesz cieszyć swoimi prześlicznymi meblami</p>
+        </div>
+    </div>
+
 </body>
 </html>
