--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/product">Produkty</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/product/add">Dodaj Produkt</a>
+            <a class="nav-link" href="/product/admin">Strona Admina</a>
           </li>
         </ul>
       </div>
