Removing header partials and replace it with bolerplate layout

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,6 +1,4 @@
-<%- include('partials/header') %>
-
-<%- include('partials/navbar') %>
+<% layout('layouts/boilerplate') %>
 
 
 <div class="container" style="background-color: lightcyan;">
@@ -27,5 +25,3 @@
     <br>
     <button class="btn btn-primary"><a style="color:white;text-decoration: none;" href="/product/add">Add Product</a></button>
 </div>
-</body>
-</html>
