--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,5 @@
-<%- include('partials/header') %>
-<body >
-    <%- include('partials/navbar') %>
+<% layout('layouts/boilerplate') %>
+
     <div class="container" style="background-color: lightcyan;">
         <h1 >Witaj poszukiwaczu wysmakowanych mebli na oficjalnej stronie Ślimaczych Stołów!!!</h1>
         <div class="container" style="margin-top: 20px;">
@@ -17,5 +16,3 @@
         </div>
     </div>
 
-</body>
-</html>
