--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,3 +9,14 @@
     <title>Document</title>
 
 </head>
+
+<body>
+    <%- include('../partials/navbar') %>
+    
+    
+    <%- body %>
+
+
+
+</body>
+</html>
