--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,6 +1,4 @@
-<%- include('partials/header') %>
-
-<%- include('partials/navbar') %>
+<% layout('layouts/boilerplate') %>
 
 <div class="container" style="margin-top: 5%; background-color: lightcyan;">
     <form action="/product/<%= product._id %>?_method=PUT" method="POST">
@@ -23,5 +21,3 @@
     </form>
 </div>
 
-</body>
-</html>
