--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,7 +1,5 @@
-<%- include('partials/header') %>
 
-<%- include('partials/navbar') %>
-
+<% layout('layouts/boilerplate') %>
 
 <div class="container" style="background-color: lightcyan;">
 
@@ -23,5 +21,3 @@
 
     <% } %> 
 </div>
-</body>
-</html>
